add header to building catalog

--- a/notebooks/00_Build_Catalog.ipynb
+++ b/notebooks/00_Build_Catalog.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f036fd98-b83f-4ad1-88f6-8e2d4c002cd6",
+   "metadata": {},
+   "source": [
+    "# Build the Intake-ESM Catalog"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "5748e6bc-4ffd-4d49-88be-54be6fa3b3de",
