--- a/_sources/00_Build_Catalog.ipynb
+++ b/_sources/00_Build_Catalog.ipynb
@@ -5,7 +5,8 @@
    "id": "f036fd98-b83f-4ad1-88f6-8e2d4c002cd6",
    "metadata": {},
    "source": [
-    "# Build the Intake-ESM Catalog"
+    "# 00 - Build the Intake-ESM Catalog\n",
+    "We can build an `intake-esm` catalog from the history files. During this analysis, we **do not** convert from history to timeseries."
    ]
   },
   {
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "44336f87-91c6-453a-9d22-cc67f3371fc0",
    "metadata": {},
    "outputs": [],
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "11e577d6-da5c-4774-9aad-76b96b71bb9d",
    "metadata": {},
    "outputs": [],
@@ -233,19 +234,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "54552474-b281-4311-8c98-a28b6fe4b327",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cases = ['b1850.f19_g17.validation_nuopc.004',\n",
+    "cases = ['b1850.f19_g17.validation_nuopc.004_copy2',\n",
     "         'b1850.f19_g17.validation_mct.004',\n",
     "         'b1850.f19_g17.validation_mct.002']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "609d8016-83e2-45b6-9f66-7914b0419b57",
    "metadata": {},
    "outputs": [
@@ -254,53 +255,55 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 72 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   1 out of   1 | elapsed:    0.3s finished\n",
+      "[Parallel(n_jobs=-1)]: Done   1 out of   1 | elapsed:    0.9s finished\n",
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 72 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  18 tasks      | elapsed:    0.7s\n",
-      "[Parallel(n_jobs=-1)]: Done 144 tasks      | elapsed:    2.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 306 tasks      | elapsed:    3.8s\n",
-      "[Parallel(n_jobs=-1)]: Done 504 tasks      | elapsed:    6.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 738 tasks      | elapsed:    8.6s\n",
-      "[Parallel(n_jobs=-1)]: Done 1008 tasks      | elapsed:   11.6s\n",
-      "[Parallel(n_jobs=-1)]: Done 1314 tasks      | elapsed:   14.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 1656 tasks      | elapsed:   18.7s\n",
-      "[Parallel(n_jobs=-1)]: Done 2034 tasks      | elapsed:   23.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 2448 tasks      | elapsed:   27.7s\n",
-      "[Parallel(n_jobs=-1)]: Done 2898 tasks      | elapsed:   33.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 3384 tasks      | elapsed:   38.5s\n",
-      "[Parallel(n_jobs=-1)]: Done 3702 out of 3702 | elapsed:   41.8s finished\n",
+      "[Parallel(n_jobs=-1)]: Done  18 tasks      | elapsed:    2.5s\n",
+      "[Parallel(n_jobs=-1)]: Done 144 tasks      | elapsed:    3.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 306 tasks      | elapsed:    5.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 504 tasks      | elapsed:   12.5s\n",
+      "[Parallel(n_jobs=-1)]: Done 738 tasks      | elapsed:   16.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 1008 tasks      | elapsed:   19.5s\n",
+      "[Parallel(n_jobs=-1)]: Done 1314 tasks      | elapsed:   23.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 1656 tasks      | elapsed:   27.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 2034 tasks      | elapsed:   33.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 2448 tasks      | elapsed:   38.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 2898 tasks      | elapsed:   44.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 3384 tasks      | elapsed:   49.7s\n",
+      "[Parallel(n_jobs=-1)]: Done 3702 out of 3702 | elapsed:   53.2s finished\n",
+      "/glade/work/mgrover/git_repos/ecgtools/ecgtools/builder.py:180: UserWarning: Unable to parse 1 assets/files. A list of these assets can be found in `.invalid_assets` attribute.\n",
+      "  parsing_func, parsing_func_kwargs\n",
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 72 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done   1 out of   1 | elapsed:    0.1s finished\n",
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 72 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done  18 tasks      | elapsed:    0.7s\n",
       "[Parallel(n_jobs=-1)]: Done 144 tasks      | elapsed:    2.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 306 tasks      | elapsed:    3.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 504 tasks      | elapsed:    6.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 738 tasks      | elapsed:    9.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 1008 tasks      | elapsed:   12.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 1314 tasks      | elapsed:   15.7s\n",
-      "[Parallel(n_jobs=-1)]: Done 1656 tasks      | elapsed:   19.4s\n",
-      "[Parallel(n_jobs=-1)]: Done 2034 tasks      | elapsed:   23.2s\n",
-      "[Parallel(n_jobs=-1)]: Done 2448 tasks      | elapsed:   28.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 2898 tasks      | elapsed:   33.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 3384 tasks      | elapsed:   38.4s\n",
-      "[Parallel(n_jobs=-1)]: Done 3702 out of 3702 | elapsed:   41.7s finished\n",
+      "[Parallel(n_jobs=-1)]: Done 306 tasks      | elapsed:    3.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 504 tasks      | elapsed:    6.5s\n",
+      "[Parallel(n_jobs=-1)]: Done 738 tasks      | elapsed:    9.2s\n",
+      "[Parallel(n_jobs=-1)]: Done 1008 tasks      | elapsed:   12.4s\n",
+      "[Parallel(n_jobs=-1)]: Done 1314 tasks      | elapsed:   16.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 1656 tasks      | elapsed:   19.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 2034 tasks      | elapsed:   23.7s\n",
+      "[Parallel(n_jobs=-1)]: Done 2448 tasks      | elapsed:   29.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 2898 tasks      | elapsed:   34.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 3384 tasks      | elapsed:   39.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 3702 out of 3702 | elapsed:   43.6s finished\n",
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 72 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   1 out of   1 | elapsed:    0.3s finished\n",
+      "[Parallel(n_jobs=-1)]: Done   1 out of   1 | elapsed:    0.1s finished\n",
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 72 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done  18 tasks      | elapsed:    0.6s\n",
-      "[Parallel(n_jobs=-1)]: Done 144 tasks      | elapsed:    1.8s\n",
-      "[Parallel(n_jobs=-1)]: Done 306 tasks      | elapsed:    3.4s\n",
-      "[Parallel(n_jobs=-1)]: Done 504 tasks      | elapsed:    5.8s\n",
-      "[Parallel(n_jobs=-1)]: Done 738 tasks      | elapsed:    8.4s\n",
-      "[Parallel(n_jobs=-1)]: Done 1008 tasks      | elapsed:   11.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 1314 tasks      | elapsed:   14.5s\n",
-      "[Parallel(n_jobs=-1)]: Done 1656 tasks      | elapsed:   18.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 2034 tasks      | elapsed:   23.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 2448 tasks      | elapsed:   27.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 2898 tasks      | elapsed:   32.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 3384 tasks      | elapsed:   37.8s\n",
-      "[Parallel(n_jobs=-1)]: Done 3702 out of 3702 | elapsed:   41.6s finished\n"
+      "[Parallel(n_jobs=-1)]: Done 144 tasks      | elapsed:    2.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 306 tasks      | elapsed:    3.7s\n",
+      "[Parallel(n_jobs=-1)]: Done 504 tasks      | elapsed:    6.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 738 tasks      | elapsed:    9.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 1008 tasks      | elapsed:   12.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 1314 tasks      | elapsed:   15.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 1656 tasks      | elapsed:   20.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 2034 tasks      | elapsed:   24.7s\n",
+      "[Parallel(n_jobs=-1)]: Done 2448 tasks      | elapsed:   29.6s\n",
+      "[Parallel(n_jobs=-1)]: Done 2898 tasks      | elapsed:   38.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 3384 tasks      | elapsed:   44.4s\n",
+      "[Parallel(n_jobs=-1)]: Done 3702 out of 3702 | elapsed:   48.2s finished\n"
      ]
     }
    ],
@@ -313,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "4af5248d-eaec-4309-8710-3da7cb9b8d45",
    "metadata": {},
    "outputs": [],
@@ -323,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "45b2a4bf-3a3e-434f-9206-6706f70f171f",
    "metadata": {},
    "outputs": [
@@ -363,306 +366,6 @@
     "        }\n",
     "    ],\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "93fe68e5-d86c-4e48-b627-8095bbf1549c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import ast which helps with parsing the list of variables\n",
-    "import ast\n",
-    "\n",
-    "# Import intake-esm\n",
-    "import intake"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "aa53c521-e973-4ecc-811c-28da6b4191ad",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<p><strong>None catalog with 8 dataset(s) from 7402 asset(s)</strong>:</p> <div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>unique</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>component</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>stream</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <td>2501</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>case</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>member_id</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>frequency</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>variables</th>\n",
-       "      <td>545</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>path</th>\n",
-       "      <td>7402</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "col = intake.open_esm_datastore(\n",
-    "    \"/glade/work/mgrover/cesm-validation-catalog.json\",\n",
-    "    csv_kwargs={\"converters\": {\"variables\": ast.literal_eval}},\n",
-    "    sep=\"/\",\n",
-    ")\n",
-    "col"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "ba415d51-5e1f-4ab0-be24-394f6a22060d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<p><strong>None catalog with 2 dataset(s) from 2400 asset(s)</strong>:</p> <div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>unique</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>component</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>stream</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <td>1200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>case</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>member_id</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>frequency</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>variables</th>\n",
-       "      <td>434</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>path</th>\n",
-       "      <td>2400</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "cat = col.search(\n",
-    "    variables='TEMP',\n",
-    "    stream='pop.h',\n",
-    ")\n",
-    "cat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "56bdeb4c-450b-413e-bd37-f9b9b21efc42",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<p><strong>None catalog with 2 dataset(s) from 2400 asset(s)</strong>:</p> <div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>unique</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>component</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>stream</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <td>1200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>case</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>member_id</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>frequency</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>variables</th>\n",
-       "      <td>434</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>path</th>\n",
-       "      <td>2400</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "cat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "c471d5b5-e581-4d0b-bf5f-aea321086d71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sub = cat.search(date=sorted(cat.df.date.unique())[:12])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a9b4812-5be3-4351-9a06-b8d21fc94ea2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--> The keys in the returned dictionary of datasets are constructed as follows:\n",
-      "\t'component/stream/case'\n"
-     ]
-    }
-   ],
-   "source": [
-    "dsets = sub.to_dataset_dict(cdf_kwargs={'use_cftime': True, 'chunks': {'time': 10}})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b80f4d4d-01aa-4f9e-af24-2dea0e194620",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dsets['ocn/pop.h/b1850.f19_g17.validation_mct.004'].TEMP.isel(z_t=0).plot()"
    ]
   }
  ],
