update analysis config

--- a/notebooks/02_Plot_Output.ipynb
+++ b/notebooks/02_Plot_Output.ipynb
@@ -165,7 +165,7 @@
     "\n",
     "They are stored in various sections separated by:\n",
     "* Physics\n",
-    "* Biogeo"
+    "* Biogeochemistry"
    ]
   },
   {
