--- a/_sources/02_Plot_Output.ipynb
+++ b/_sources/02_Plot_Output.ipynb
@@ -24,7 +24,7 @@
     "* Physics\n",
     "* Biogeochemistry\n",
     "\n",
-    "You can find these plots throughout the Jupyter notebooks listed along the table of contents on the left side of the page. Below, is a summary of the available plots with links to the specific portion of the notebooks with those respective variables\n",
+    "You can find these plots throughout the Jupyter notebooks listed along the table of contents on the left side of the page. Below, is a summary of the available plots with links to the specific portion of the notebooks with those respective variables.\n",
     "\n",
     "---"
    ]
