--- a/notebooks/01_Compute_20yr_mean.ipynb
+++ b/notebooks/01_Compute_20yr_mean.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6163e0ff-c4e1-4d33-b116-dc896c662be8",
    "metadata": {
     "tags": []
    },
@@ -13,7 +12,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6585ed7-e636-4c7e-be2e-2b0297bd2adf",
    "metadata": {},
    "source": [
     "## Imports\n",
@@ -23,7 +21,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8cf5cca4-6928-4f5c-936a-a9862b3fe41c",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +46,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce656130-ef45-4bd9-887b-2c4ab202b3dc",
    "metadata": {},
    "source": [
     "## Spin up a Dask Cluster"
@@ -58,7 +54,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "658bb5e9-fb28-49fe-9dfb-cea8799957d5",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +83,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2026b023-7386-4bed-9d44-119c241c52d3",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +226,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "707c3c9d-8051-4bf1-a78a-888136db3223",
    "metadata": {},
    "source": [
     "## Open the Intake-ESM Catalog\n",
@@ -242,7 +235,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9a5eeb19-2974-421f-99e5-378423f5062d",
    "metadata": {},
    "outputs": [
     {
@@ -315,18 +307,17 @@
     }
    ],
    "source": [
-    "col = intake.open_esm_datastore(\n",
+    "data_catalog = intake.open_esm_datastore(\n",
     "    \"/glade/work/mgrover/cesm-validation-catalog.json\",\n",
     "    csv_kwargs={\"converters\": {\"variables\": ast.literal_eval}},\n",
     "    sep=\"/\",\n",
     ")\n",
-    "col"
+    "data_catalog"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b975d508-deb9-4b2d-89e9-39d4bfa15c3a",
    "metadata": {},
    "outputs": [
     {
@@ -399,15 +390,14 @@
     }
    ],
    "source": [
-    "cat = col.search(\n",
+    "data_catalog_subset = col.search(\n",
     "    frequency='month_1',\n",
     ")\n",
-    "cat"
+    "data_catalog_subset"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d536d753-0288-4c80-940b-958dec6a3671",
    "metadata": {},
    "source": [
     "### Subset the last 20 years of data"
@@ -416,7 +406,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0128577e-3af6-4829-8985-1d4eba67b953",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,16 +415,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "128117e7-d33c-42f2-aaf4-e146656d338b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub = cat.search(date=dates[-240:])"
+    "data_catalog_subset = data_catalog_subset.search(date=dates[-240:])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5e34493d-d9e8-4088-ac42-47a11fc5a6c3",
    "metadata": {},
    "source": [
     "### Read in our dataset using `to_dataset_dict()`"
@@ -444,7 +431,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "777c4ee6-f4f5-46f4-801b-58ce610409af",
    "metadata": {},
    "outputs": [
     {
@@ -487,13 +473,12 @@
     }
    ],
    "source": [
-    "dsets = sub.to_dataset_dict(cdf_kwargs={'use_cftime': True, 'chunks': {'time': 60}})"
+    "dsets = data_catalog_subset.to_dataset_dict(cdf_kwargs={'use_cftime': True, 'chunks': {'time': 60}})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cfe21e4e-7746-4a7b-9aa7-a05205268541",
    "metadata": {},
    "outputs": [
     {
@@ -44564,7 +44549,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e0e1fd9-5057-447d-9f58-9cbb185325b3",
    "metadata": {
     "tags": []
    },
@@ -44576,7 +44560,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "18c5fb57-3814-4e2b-9c0e-84a2f71e1d52",
    "metadata": {},
    "outputs": [
     {
@@ -44626,7 +44609,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5dbf2e7b-62fd-45ca-a3d1-5c091a872a6c",
    "metadata": {},
    "outputs": [
     {
@@ -44647,7 +44629,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f42aab2f-72d9-4879-975c-580bd310fa49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44663,7 +44644,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "fe022bdd-1708-48b8-9bdc-b92b3539c9f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44672,7 +44652,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7af42f17-d2d6-49d8-8d74-9b7d0873af19",
    "metadata": {},
    "source": [
     "We also want to make sure that we keep the title, or case information"
@@ -44681,7 +44660,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f23842d7-b199-4a3d-bc88-811907da940d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44693,7 +44671,6 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "3eddf7e4-9c0f-4ed0-b344-a435afd8d594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44703,7 +44680,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b88f1035-79b6-42d1-a666-e0c55d506b5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44713,7 +44689,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "28f630df-a579-4228-9b58-ce164d406a46",
    "metadata": {},
    "outputs": [
     {
@@ -47079,7 +47054,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3415eee6-2953-4989-84d9-887197e7fc4f",
    "metadata": {},
    "source": [
     "### Export our data\n",
@@ -47089,7 +47063,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "41bfc5fc-d441-48d3-a641-c0e6119c36b2",
    "metadata": {},
    "outputs": [
     {
@@ -47110,7 +47083,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6128e224-6c2c-42da-87ac-d1491039d085",
    "metadata": {},
    "outputs": [],
    "source": []
