--- a/_sources/00_Build_Catalog.ipynb
+++ b/_sources/00_Build_Catalog.ipynb
@@ -193,7 +193,7 @@
    "source": [
     "b.save(\n",
     "    # File path - could save as .csv (uncompressed csv) or .csv.gz (compressed csv)\n",
-    "    \"../data/cesm-validation-catalog.csv\",\n",
+    "    analysis_config[\"catalog_csv\"],\n",
     "    # Column name including filepath\n",
     "    path_column_name='path',\n",
     "    # Column name including variables\n",
