--- a/_sources/00_Build_Catalog.ipynb
+++ b/_sources/00_Build_Catalog.ipynb
@@ -19,7 +19,7 @@
     "from ecgtools import Builder\n",
     "from ecgtools.parsers.cesm import parse_cesm_history\n",
     "from config import analysis_config\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -62,47 +62,6 @@
     "    # Number of jobs to execute - should be equal to # threads you are using\n",
     "    njobs=-1,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "bba30920-908a-4eb6-a061-b36da6777c17",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n",
-      "[PosixPath('/glade/scratch/hannay/archive/b1850.f19_g17.validation_mct.004/ocn/hist'), PosixPath('/glade/scratch/hannay/archive/b1850.f19_g17.validation_mct.002/ocn/hist'), PosixPath('/glade/scratch/hannay/archive/b1850.f19_g17.validation_nuopc.004_copy2/ocn/hist')]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 40 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   3 out of   3 | elapsed:    0.7s remaining:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done   3 out of   3 | elapsed:    0.7s finished\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Builder(root_path=[PosixPath('/glade/scratch/hannay/archive/b1850.f19_g17.validation_mct.004/ocn/hist'), PosixPath('/glade/scratch/hannay/archive/b1850.f19_g17.validation_mct.002/ocn/hist'), PosixPath('/glade/scratch/hannay/archive/b1850.f19_g17.validation_nuopc.004_copy2/ocn/hist')], extension='.nc', depth=1, exclude_patterns=['*/tseries/*', '*/rest/*'], njobs=-1)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "b.get_directories()\n",
-    "#b.dirs = b.dirs[0]\n",
-    "b.get_filelist()"
    ]
   },
   {
